--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ pre code{display: block;border: 1px solid #cccccc;}
 blockquote{border-left:5px solid #bbb;padding-left:0.5em;}
 ul li{list-style:circle;}ol li{list-style:hiragana;}
 table{border-collapse:collapse;border:1px solid;}th{border:1px solid;}td{border:1px solid;}
-textarea{width:100%;height:80vh;font-size:1.1em}
+textarea{width:100%;height:30vh;font-size:1.1em}
 article{background-color:#ececec;max-width:80rem;margin:0 auto;padding:0 1rem;}
 .card{opacity: 0.87;position: relative;max-width:80rem;padding: 8px 32px;margin:0 auto 8px;
 box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
@@ -19,4 +19,5 @@ border-radius: 8px;background: white;}
 nav {background: #202020;max-width:80rem;padding:0 32px;margin:0 auto;display: flex;}
 nav h1 {flex: 3;}
 nav label {color: #fff;padding-top: 0.5em;}
+button {width:22%;height:4vh;margin:0.1em;}
 @media screen and (max-width: 400px) { #kwd{width: 100px;} }
