--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{color:#111;background-color:#f4f4f4;}
-header{font-family:Montserrat, sans-serif;font-size:2em;background-color:#202020;color:#e7e7e7;margin:0;padding-top:0.5em;padding-left:0.5em;font-weight:bold;}
-h1{font-family:Montserrat, sans-serif;font-size:2em;background-color:#202020;color:#e7e7e7;margin:0;padding-top:0.5em;padding-left:0.5em;}
-h2{font-family:Montserrat, sans-serif;font-size:1.7em;color:#037;padding-top:0.2em;margin:0.2em;}
+header{font-size:2em;background-color:#202020;color:#e7e7e7;margin:0;padding-top:0.5em;padding-left:0.5em;font-weight:bold;}
+h1{font-size:2em;background-color:#202020;color:#e7e7e7;margin:0;padding-top:0.5em;padding-left:0.5em;}
+h2{font-size:1.7em;color:#037;padding-top:0.2em;margin:0.2em;}
 h3{color:#409eff;}p{font-family:Montserrat, sans-serif;font-size:1.2em;}
 em{color:#00f;font-style:normal;}strong{color:#f00;font-style:normal;}
 pre{white-space:pre-wrap;font-size:1.1em;}
@@ -10,7 +10,7 @@ pre code{display: block;border: 1px solid #cccccc;}
 blockquote{border-left:5px solid #bbb;padding-left:0.5em;}
 ul li{list-style:circle;}ol li{list-style:hiragana;}
 table{border-collapse:collapse;border:1px solid;}th{border:1px solid;}td{border:1px solid;}
-textarea{width:100%;height:80vh;font-size:1.1em}
+textarea{width:100%;height:30vh;font-size:1.1em}
 article{background-color:#ececec;max-width:80rem;margin:0 auto;padding:0 1rem;}
 .card{opacity: 0.87;position: relative;max-width:80rem;padding: 8px 32px;margin:0 auto 8px;
 box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
